# monkey-typer

./: .gitignore  Cargo.toml  Dockerfile  README.md  demo.tks.json
.github/workflows/: rust.yml
src/: cli.rs  config.rs  data.rs  errors.rs  logging.rs  main.rs  playback.rs  prelude.rs  recording.rs
src/engine/: engine.rs  playhead.rs
src/format/: tks_json.rs
src/io/: keyboard.rs
src/output/: injector.rs  os_inject.rs
