[package]
name = "monkey-typer"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.70"

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
enigo = "0.1.3"
rdev = "0.5.3"
crossbeam-channel = "0.5.15"

[features]
default = ["cli"]
cli = []
gui = []
midi = []
osc  = []
