[package]
name = "monkey-typer"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.70"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
crossbeam-channel = "0.5"

core-graphics = "0.25"
core-foundation = "0.10"

enigo = "0.2"

